--- a/app/src/main/res/layout/list_item_character.xml
+++ b/app/src/main/res/layout/list_item_character.xml
@@ -16,7 +16,12 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-
+    <TextView
+        android:id="@+id/Numerido"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/robotocondensedbold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/nameTextView"
